--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -14,7 +14,7 @@
 
       <section class="card">
         <div class="card-section">
-          <%= link_to "Back to this plan", @plan, class: "text-blue-600 transition-colors font-bold underline text-lg" %>
+          <%= link_to "Back to this plan", plan_path(@plan, week: @week), class: "text-blue-600 transition-colors font-bold underline text-lg" %>
         </div>
         <div class="divider"></div>
         <div class="card-section">
